--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "assignment",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://Negroo21.github.io/React-App-1",
+  "homepage": "https://Negroo21.github.io/React-project-i",
   "type": "module",
   "scripts": {
     "dev": "vite",
